Update tests projects to use the new Graph calling pattern (#311)

--- a/packages/cli/templates/typescript/graph/package.json.hbs
+++ b/packages/cli/templates/typescript/graph/package.json.hbs
@@ -21,7 +21,8 @@
     "@microsoft/teams.cards": "preview",
     "@microsoft/teams.common": "preview",
     "@microsoft/teams.dev": "preview",
-    "@microsoft/teams.graph": "preview"
+    "@microsoft/teams.graph": "preview",
+    "@microsoft/teams.graph-endpoints": "preview",
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
