--- a/packages/cli/templates/typescript/tab/package.json.hbs
+++ b/packages/cli/templates/typescript/tab/package.json.hbs
@@ -24,6 +24,7 @@
     "@microsoft/teams.common": "preview",
     "@microsoft/teams.dev": "preview",
     "@microsoft/teams.graph": "preview",
+    "@microsoft/teams.graph-endpoints": "preview",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
