--- a/packages/graph-tools/templates/common.ts.hbs
+++ b/packages/graph-tools/templates/common.ts.hbs
@@ -7,7 +7,7 @@ export type EndpointRequest<TResponse> = {
 {{/if}}
   method: 'get' | 'post' | 'patch' | 'delete' | 'put';
   path: string;
-  paramDefs: Array<{ name: string; in: 'query' | 'header' | 'path' }>;
+  paramDefs?: Array<{ name: string; in: 'query' | 'header' | 'path' }>;
   params?: Record<string, any>;
   body?: any;
   responseType?: TResponse; 
