Config changes for python deployment - dev env (#346)
1. add env.dev file, so ATK displays the option of "dev" env
2. Use Single tenant auth
3. Made python specific changes - use linux instead of windows for
webapp, generate requirements.txt before deployment, use python main.py
as startup command

Co-authored-by: Mehak Bindra <mehakbindra@microsoft.com>

--- a/packages/cli/configs/atk/basic/python/infra/azure.parameters.json.hbs
+++ b/packages/cli/configs/atk/basic/python/infra/azure.parameters.json.hbs
@@ -8,6 +8,18 @@
     "webAppSKU": {
       "value": "B1"
     },
+    "botAadAppClientId": {
+      "value": "$\{{BOT_ID}}"
+    },
+    "botAadAppClientSecret": {
+      "value": "$\{{SECRET_BOT_PASSWORD}}"
+    },
+    "tenantId": {
+      "value": "$\{{AAD_APP_TENANT_ID}}"
+    },
+    "linuxFxVersion": {
+      "value": "PYTHON|3.12"
+    },
     "botDisplayName": {
       "value": "{{ toPascalCase name }}Infra"
     }
