--- a/packages/cli/configs/atk/basic/typescript/infra/azure.parameters.json.hbs
+++ b/packages/cli/configs/atk/basic/typescript/infra/azure.parameters.json.hbs
@@ -8,6 +8,15 @@
     "webAppSKU": {
       "value": "B1"
     },
+    "botAadAppClientId": {
+      "value": "$\{{BOT_ID}}"
+    },
+    "botAadAppClientSecret": {
+      "value": "$\{{SECRET_BOT_PASSWORD}}"
+    },
+    "tenantId": {
+      "value": "$\{{AAD_APP_TENANT_ID}}"
+    },
     "botDisplayName": {
       "value": "{{ toPascalCase name }}Infra"
     }
