--- a/packages/cli/configs/atk/basic/typescript/teamsapp.yml.hbs
+++ b/packages/cli/configs/atk/basic/typescript/teamsapp.yml.hbs
@@ -20,25 +20,52 @@ provision:
     writeToEnvironmentFile:
       teamsAppId: TEAMS_APP_ID
 
-  # Automates the creation an Azure AD app registration which is required for a bot.
-  # The Bot ID (AAD app client ID) and Bot Password (AAD app client secret) are saved to an environment file.
-  - uses: botAadApp/create
+  # Creates a new Microsoft Entra app to authenticate users if
+  # the environment variable that stores clientId is empty
+  - uses: aadApp/create
     with:
       name: {{ toPascalCase name }}$\{{APP_NAME_SUFFIX}}
+      # Note: when you run aadApp/update, the Microsoft Entra app name will be updated
+      # based on the definition in manifest. If you don't want to change the
+      # name, make sure the name in Microsoft Entra manifest is the same with the name
+      # defined here.
+      # If the value is false, the driver will not generate client secret for you
+      generateClientSecret: true
+      # organization's Microsoft Entra tenant (for example, single tenant).
+      signInAudience: AzureADMultipleOrgs
+    # Write the information of created resources into environment file for the
+    # specified environment variable(s).
     writeToEnvironmentFile:
-      botId: BOT_ID
-      botPassword: SECRET_BOT_PASSWORD
+      clientId: BOT_ID
+      # Environment variable that starts with `SECRET_` will be stored to the
+      # .env.{envName}.user environment file
+      clientSecret: SECRET_BOT_PASSWORD
+      objectId: AAD_APP_OBJECT_ID
+      tenantId: AAD_APP_TENANT_ID
 
-  # Automates the creation of infrastructure defined in ARM templates to host the bot.
-  # The created resource IDs are saved to an environment file.
-  - uses: arm/deploy
+  - uses: arm/deploy # Deploy given ARM templates parallelly.
     with:
+      # AZURE_SUBSCRIPTION_ID is a built-in environment variable,
+      # if its value is empty, TeamsFx will prompt you to select a subscription.
+      # Referencing other environment variables with empty values
+      # will skip the subscription selection prompt.
       subscriptionId: $\{{AZURE_SUBSCRIPTION_ID}}
+      # AZURE_RESOURCE_GROUP_NAME is a built-in environment variable,
+      # if its value is empty, TeamsFx will prompt you to select or create one
+      # resource group.
+      # Referencing other environment variables with empty values
+      # will skip the resource group selection prompt.
       resourceGroupName: $\{{AZURE_RESOURCE_GROUP_NAME}}
       templates:
-        - path: ./infra/azure.bicep
+        - path: ./infra/azure.bicep # Relative path to this file
+          # Relative path to this yaml file.
+          # Placeholders will be replaced with corresponding environment
+          # variable before ARM deployment.
           parameters: ./infra/azure.parameters.json
-          deploymentName: Create-resources-for-tab
+          # Required when deploying ARM template
+          deploymentName: Create-resources-for-bot
+      # M365 Agents Toolkit will download this bicep CLI version from github for you,
+      # will use bicep CLI in PATH if you remove this config.
       bicepCliVersion: v0.9.1
 
   # Optional: Automates schema and error checking of the Teams app manifest and outputs the results in the console.
