--- a/packages/cli/configs/atk/oauth/typescript/infra/azure.parameters.local.json.hbs
+++ b/packages/cli/configs/atk/oauth/typescript/infra/azure.parameters.local.json.hbs
@@ -19,6 +19,9 @@
     },
     "oauthConnectionName": {
       "value": "$\{{OAUTH_CONNECTION_NAME}}"
+    },
+    "tenantId": {
+      "value": "$\{{AAD_APP_TENANT_ID}}"
     }
   }
 }
