--- a/packages/cli/templates/typescript/mcp/package.json.hbs
+++ b/packages/cli/templates/typescript/mcp/package.json.hbs
@@ -1,40 +1,41 @@
 {
-  "name": "{{ toKebabCase name }}",
-  "version": "0.0.0",
-  "license": "MIT",
-  "private": true,
-  "main": "dist/index",
-  "types": "dist/index",
-  "files": [
-    "dist",
-    "README.md"
-  ],
-  "scripts": {
-    "clean": "npx rimraf ./dist",
-    "build": "npx tsc",
-    "start": "node .",
-    "dev": "npx nodemon -w \"./src/**\" -e ts --exec \"node -r ts-node/register -r dotenv/config ./src/index.ts\"",
-    "inspect": "npx cross-env SERVER_PORT=9000 npx @modelcontextprotocol/inspector -e NODE_NO_WARNINGS=1 -e PORT=3978 node -r dotenv/config ."
-  },
-  "dependencies": {
-    "@microsoft/teams.api": "preview",
-    "@microsoft/teams.apps": "preview",
-    "@microsoft/teams.cards": "preview",
-    "@microsoft/teams.common": "preview",
-    "@microsoft/teams.dev": "preview",
-    "@microsoft/teams.graph": "preview",
-    "@microsoft/teams.mcp": "preview",
-    "@microsoft/teams.openai": "preview",
-    "@modelcontextprotocol/sdk": "^1.7.0"
-  },
-  "devDependencies": {
-    "@modelcontextprotocol/inspector": "^0.6.0",
-    "@types/node": "^22.5.4",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.4.5",
-    "nodemon": "^3.1.4",
-    "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
-  }
+"name": "{{ toKebabCase name }}",
+"version": "0.0.0",
+"license": "MIT",
+"private": true,
+"main": "dist/index",
+"types": "dist/index",
+"files": [
+"dist",
+"README.md"
+],
+"scripts": {
+"clean": "npx rimraf ./dist",
+"build": "npx tsc",
+"start": "node .",
+"dev": "npx nodemon -w \"./src/**\" -e ts --exec \"node -r ts-node/register -r dotenv/config ./src/index.ts\"",
+"inspect": "npx cross-env SERVER_PORT=9000 npx @modelcontextprotocol/inspector -e NODE_NO_WARNINGS=1 -e PORT=3978 node
+-r dotenv/config ."
+},
+"dependencies": {
+"@microsoft/teams.api": "latest",
+"@microsoft/teams.apps": "latest",
+"@microsoft/teams.cards": "latest",
+"@microsoft/teams.common": "latest",
+"@microsoft/teams.dev": "latest",
+"@microsoft/teams.graph": "latest",
+"@microsoft/teams.mcp": "latest",
+"@microsoft/teams.openai": "latest",
+"@modelcontextprotocol/sdk": "^1.7.0"
+},
+"devDependencies": {
+"@modelcontextprotocol/inspector": "^0.6.0",
+"@types/node": "^22.5.4",
+"cross-env": "^7.0.3",
+"dotenv": "^16.4.5",
+"nodemon": "^3.1.4",
+"rimraf": "^6.0.1",
+"ts-node": "^10.9.2",
+"typescript": "^5.4.5"
+}
 }
