--- a/turbo/generators/templates/package/README.md.hbs
+++ b/turbo/generators/templates/package/README.md.hbs
@@ -2,7 +2,7 @@
 
 <p>
     <a href="https://www.npmjs.com/package/@microsoft/teams.{{name}}" target="_blank">
-        <img src="https://img.shields.io/npm/v/@microsoft/teams.{{name}}/preview" />
+        <img src="https://img.shields.io/npm/v/@microsoft/teams.{{name}}/latest" />
     </a>
     <a href="https://www.npmjs.com/package/@microsoft/teams.{{name}}?activeTab=code" target="_blank">
         <img src="https://img.shields.io/bundlephobia/min/@microsoft/teams.{{name}}" />
